style: rename file

--- a/Empresas_CRUD/Client/Pages/Listar_Empresas.razor
+++ b/Empresas_CRUD/Client/Pages/Listar_Empresas.razor
@@ -1,4 +1,4 @@
-﻿@page "/empresas"
+﻿@page "/listar-empresas"
 
 @inject IEmpresaService EmpresaService
 @inject NavigationManager NavigationManager
