--- a/Empresas_CRUD/Client/Shared/NavMenu.razor
+++ b/Empresas_CRUD/Client/Shared/NavMenu.razor
@@ -25,7 +25,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="empresas">
+            <NavLink class="nav-link" href="listar-empresas">
                 <span class="oi oi-people" aria-hidden="true"></span> Empresas
             </NavLink>
         </div>
