--- a/Empresas_CRUD/Client/Pages/Editar_Empresa.razor
+++ b/Empresas_CRUD/Client/Pages/Editar_Empresa.razor
@@ -2,18 +2,60 @@
 @page "/editar-empresa/{id:int}"
 @inject IEmpresaService EmpresaService
 
-@if(Id == null)
+@* testo se Id é null. Se for null, é caso de adição de empresa. Se diferente de null, é edição de empresa
+    existente
+*@
+@if (Id == null)
 {
     <PageTitle>Add uma nova empresa</PageTitle>
     <h3>Adicione uma nova empresa</h3>
 }
 else
 {
-    <PageTitle>Edite</PageTitle>
-    <h3>Edite</h3>
+    <PageTitle>Edite @empresa.Nome</PageTitle>
+    <h3>Edite @empresa.Nome</h3>
 }
+
+<EditForm Model="empresa" OnSubmit="HandleSubmit">
+    <div>
+        <label for="nome">Nome</label>
+        <InputText id="nome" @bind-Value="empresa.Nome" class="form-control"></InputText>
+    </div>
+    <div>
+        <label for="site">Site</label>
+        <InputText id="site" @bind-Value="empresa.Site" class="form-control"></InputText>
+    </div>
+    <div>
+        <label for="segmento">Segmento</label>
+        <InputSelect id="segmento" @bind-Value="empresa.SegmentoId" class="form-select">
+            @foreach( var segmento in EmpresaService.Segmentos)
+            {
+                <option value="@segmento.Id">@segmento.Nome</option>
+            }
+        </InputSelect>
+    </div>
+</EditForm>
+
 @code {
     [Parameter]
     public int? Id { get; set; }
-    Empresas empresa = new Empresas();
+
+    Empresas empresa = new Empresas{ Segmento = new Segmentos() };
+
+    protected override async Task OnParametersSetAsync()
+    {
+        if (Id == null)
+        {
+            //criar uma empresa
+        }
+        else
+        {
+            empresa = await EmpresaService.GetSingleEmpresa((int)Id);
+        }
+    }
+
+    void HandleSubmit()
+    {
+        
+    }
 }
