--- a/Empresas_CRUD/Client/Shared/NavMenu.razor
+++ b/Empresas_CRUD/Client/Shared/NavMenu.razor
@@ -26,7 +26,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="listar-empresas">
-                <span class="oi oi-people" aria-hidden="true"></span> Empresas
+                <span class="oi oi-briefcase" aria-hidden="true"></span> Empresas
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="listar-empresas">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Segmentos
             </NavLink>
         </div>
     </nav>
