add: segmentoService build and imports into project

--- a/Empresas_CRUD/Client/_Imports.razor
+++ b/Empresas_CRUD/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using Empresas_CRUD.Client
 @using Empresas_CRUD.Client.Shared
 @using Empresas_CRUD.Client.Services.EmpresaService
+@using Empresas_CRUD.Client.Services.SegmentoService
