fix: table rows

--- a/Empresas_CRUD/Client/Pages/Listar_Segmentos.razor
+++ b/Empresas_CRUD/Client/Pages/Listar_Segmentos.razor
@@ -3,7 +3,6 @@
 @inject ISegmentoService SegmentoService
 @inject NavigationManager NavigationManager
 
-
 <PageTitle>Segmentos</PageTitle>
 <h3>Segmentos</h3>
 
@@ -12,21 +11,19 @@
     <thead>
         <tr>
             <th>Nome</th>
-            <th>Descrição</th>
             <th>Ações</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var segmento in SegmentoService.Segmentos)
         {
-            <tr>
-                <td>@segmento.Nome</td>
-                <td></td>
-                <td>
-                    <button class="btn btn-pencil" @onclick="(() => MostrarSegmento(segmento.Id))"><i class="oi oi-pencil"></i></button>
-                    <button class="btn btn-delete" @onclick="(() => DeleteSegmento(segmento.Id))"><i class="oi oi-trash"></i></button>
-                </td>
-            </tr>
+                <tr>
+                    <td>@segmento.Nome</td>
+                    <td>
+                        <button class="btn btn-pencil" @onclick="(() => MostrarSegmento(segmento.Id))"><i class="oi oi-pencil"></i></button>
+                        <button class="btn btn-delete" @onclick="(() => DeleteSegmento(segmento.Id))"><i class="oi oi-trash"></i></button>
+                    </td>
+                </tr>
         }
     </tbody>
 </table>
@@ -36,7 +33,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await SegmentoService.GetSegmento();
+        await SegmentoService.GetSegmentos();
     }
 
     void MostrarSegmento(int id)
@@ -44,12 +41,12 @@
         NavigationManager.NavigateTo($"editar-empresa/{id}");
     }
 
-    void CreateNewEmpresa()
+    void CreateNewSegmento()
     {
         NavigationManager.NavigateTo("/editar-empresa");
     }
-    
-    void DeleteEmpresa(int id)
+
+    void DeleteSegmento(int id)
     {
         NavigationManager.NavigateTo($"editar-empresa/{id}");
     }
