--- a/Empresas_CRUD/Client/Shared/NavMenu.razor
+++ b/Empresas_CRUD/Client/Shared/NavMenu.razor
@@ -30,7 +30,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="listar-empresas">
+            <NavLink class="nav-link" href="listar-segmentos">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Segmentos
             </NavLink>
         </div>
